tests/negative/semantics/if_condition_not_bool.stream
// EXPECT: Error
if 123 { // Error: 123 is Int, not Bool
    print("Bad");
}